--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@types/howler": "^2.2.12",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.23.24",
     "howler": "^2.2.4",
     "react": "^19.1.1",
